[gd_scene load_steps=3 format=3 uid="uid://drgxkhuopv6cf"]

[ext_resource type="Script" path="res://addons/gamesaver/save_dock.gd" id="1_amrd8"]
[ext_resource type="Texture2D" uid="uid://delav4hm6nyij" path="res://addons/gamesaver/maddev_logo_claro.png" id="2_1e60v"]

[node name="Save" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 183.0
offset_bottom = 507.0
script = ExtResource("1_amrd8")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Conte√∫do do Save:"

[node name="SaveDataDisplay" type="RichTextLabel" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "{ \"id\": 6, \"moedas\": [0, 0, 1, 2], \"brunao\": \"dev\" }"

[node name="Title2" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Editar o Save:"

[node name="Chave" type="LineEdit" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Chave"

[node name="Valor" type="LineEdit" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Valor"

[node name="Edit" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Sobrescrever Valor"

[node name="Title3" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Local do Save:"

[node name="SavePathDisplay" type="RichTextLabel" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 2
text = "C:/Users/Bruno/AppData/Roaming/Godot/app_userdata/gamesaver/save.cfg"
fit_content = true
selection_enabled = true
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="OpenSaveFolder" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Abrir Local do Save"

[node name="DeleteSave" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Apagar Save"

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_1e60v")
expand_mode = 1

[connection signal="pressed" from="ScrollContainer/VBoxContainer/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/OpenSaveFolder" to="." method="_on_open_save_folder_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/DeleteSave" to="." method="_on_delete_save_pressed"]
